Add asynchronous NIO socket Stream implementation